 * `row_ievora` and `col_ievora` functions are removed. ievora method is a simple application of a Bartlett's test followed by a Student's t-test and can be performed manually.
 * `Inf` values in `wilcox_*` tests are no longer removed but treated as highest ranks in order to be consistent with base R 4.0.0. implementation.
 * Missing argument errors no longer reference `force()` in their error messages.
 * Warning message about constant values in rows are now consistent between tests.
 * Warning message about too few remaining observations are now more consistent between wilcoxon and t tests.
 * When a test cannot be executed all test-specific outputs (including test statistic, standard error,  and degrees of freedom) are now turned to NA for that row/column.

INTERNAL:

 * matrixTests no longer depends on `testthat` for unit tests.
 * All unit tests were rewritten.


Version 0.1.9 [2020 April 30]

NEW FEATURES:

 * Added van der Waerden test: `row_waerden` and `col_waerden`.

DOCUMENTATION:

 * Changed NEWS format to markdown.


Version 0.1.8 [2020 Jan 08]

INTERNAL:

 * Adjusted unit tests to conform with changes in R-devel 4.0.0 for CRAN.


Version 0.1.7 [2019 Nov 05]

NEW FEATURES:

 * Added Cosinor test: `row_cosinor` and `col_cosinor`.


Version 0.1.6 [2019 Sep 19]

NEW FEATURES:

 * Added Levene test: `row_levene` and `col_levene`.
 * Added Brown-Forsythe test: `row_brownforsythe` and `col_brownforsythe`.


Version 0.1.5 [2019 Jul 09]

NEW FEATURES:

 * Added F-test for variance: `row_f_var` and it's column equivalent.

INTERNAL:

 * Various speed improvements across all types of tests.
 * Added missing tests for warnings about NA values in "group" argument.


Version: 0.1.4 [2019 Jun 25]

INTERNAL:

 * Improved the speed of Wilcoxon and Kruskal Wallis tests.
 * Improved the speed of Oneway and Bartlett tests.
 * Added run time benchmarks.
 * Expanded test coverage to include all lines within code at least once.